@@ -44,8 +44,6 @@ public final class DriverFactory {
 
                 options.setCapability("selenoid:options", new HashMap() {{
                     put("name", "Test badge...");
-                    put("browserName","chrome");
-                    put("browserVersion","111.0");
                     put("sessionTimeout", "5m");
                     put("screenResolution","1920x1080x24");
                     put("enableVNC", true); // if true While exection test case we will see video
@@ -55,8 +53,8 @@ public final class DriverFactory {
                     {{put("manual", "true");}});
                 }});
 
-               // driver = new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), options);
-                driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
+               driver = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
+               // driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
                 driver.manage().window().fullscreen();
 
             }
